--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../Invitation/img/invitation.png">
+    <link rel="shortcut icon" href="img/invitation.png">
    
   </head>
   <body>
@@ -45,7 +45,7 @@
   <span>C. Nagaraj & J. Premakumari</span>
   <span><b>Gift in the forms of blessing</b></span>
 </div>
-  <div class="b_right"><img class="Bride" src="../Invitation/img/bride-and-groom.png" alt="bride-and-groom"></div>
+  <div class="b_right"><img class="Bride" src="img/bride-and-groom.png" alt="bride-and-groom"></div>
 </div>
 
 
